--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@capacitor/keyboard": "5.0.6",
     "@capacitor/status-bar": "5.0.6",
     "@ionic/angular": "^7.0.0",
+    "@ngx-translate/core": "^15.0.0",
+    "bootstrap": "^5.3.2",
     "ionicons": "^7.0.0",
     "npm": "^10.2.3",
     "rxjs": "~7.8.0",
