--- a/angular.json
+++ b/angular.json
@@ -31,8 +31,7 @@
                 "output": "./svg"
               }
             ],
-            "styles": ["src/theme/variables.scss", "src/global.scss","node_modules/bootstrap/dist/css/bootstrap.min.css",
-            "src/styles.css"],
+            "styles": ["src/theme/variables.scss", "src/global.scss","node_modules/bootstrap/dist/css/bootstrap.min.css"],
             
 
             "scripts": []
